--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -1,4 +1,4 @@
-﻿name: Release
+name: Release
 
 on:
   release:
@@ -8,66 +8,57 @@ jobs:
   build:
     name: "Release"
     env:
-        ASPNETCORE_ENVIRONMENT: "Production"
-
+      ASPNETCORE_ENVIRONMENT: "Production"
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v2.3.4
 
-    - name: Get the version
-      id: get_version
-      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
 
-    - name: Restore Nuget Packages
-      run: dotnet restore CallbackHandler.sln --source ${{ secrets.PUBLICFEEDURL }} --source ${{ secrets.PRIVATEFEED_URL }}
+      - name: Restore Nuget Packages
+        run: dotnet restore CallbackHandler.sln --source ${{ secrets.PUBLICFEEDURL }} --source ${{ secrets.PRIVATEFEED_URL }}
 
-    - name: Build Code
-      run: dotnet build CallbackHandler.sln --configuration Release
+      - name: Build Code
+        run: dotnet build CallbackHandler.sln --configuration Release
 
-    - name: Run Unit Tests
-      run: |
-        echo "ASPNETCORE_ENVIRONMENT are > ${ASPNETCORE_ENVIRONMENT}"
-        dotnet test "CallbackHandler.BusinessLogic.Tests\CallbackHandler.BusinessLogic.Tests.csproj"
-        dotnet test "CallbackHandler.CallbackMessageAggregate.Tests\CallbackHandler.CallbackMessageAggregate.Tests.csproj"
-        dotnet test "CallbackHandler.Tests\CallbackHandler.Tests.csproj"
+      - name: Run Unit Tests
+        run: |
+          echo "ASPNETCORE_ENVIRONMENT is > ${ASPNETCORE_ENVIRONMENT}"
+          dotnet test "CallbackHandler.BusinessLogic.Tests/CallbackHandler.BusinessLogic.Tests.csproj"
+          dotnet test "CallbackHandler.CallbackMessageAggregate.Tests/CallbackHandler.CallbackMessageAggregate.Tests.csproj"
+          dotnet test "CallbackHandler.Tests/CallbackHandler.Tests.csproj"
 
-    - name: Publish Images to Docker Hub - Pre Release
-      if: ${{ github.event.release.prerelease == true }} 
-      run: |
-        docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhandler:dev
-        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
-        docker push stuartferguson/callbackhandler:dev
+      - name: Publish Docker Image - Pre Release
+        if: ${{ github.event.release.prerelease == true }} 
+        run: |
+          docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhandler:dev
+          docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+          docker push stuartferguson/callbackhandler:dev
 
-    - name: Publish Images to Docker Hub - Formal Release
-      if: ${{ github.event.release.prerelease == false }} 
-      run: |
-        docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhandler:latest
-        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
-        docker push stuartferguson/callbackhandler:latest
+      - name: Publish Docker Image - Formal Release
+        if: ${{ github.event.release.prerelease == false }} 
+        run: |
+          docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhandler:latest
+          docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+          docker push stuartferguson/callbackhandler:latest
 
-    - name: Publish API
-      if: ${{ github.event.release.prerelease == false }} 
-      run: dotnet publish "CallbackHandler\CallbackHandler.csproj" --configuration Release --output publishOutput -r linux-x64 --self-contained
+      - name: Publish API
+        if: ${{ github.event.release.prerelease == false }} 
+        run: dotnet publish "CallbackHandler/CallbackHandler.csproj" --configuration Release --output publishOutput -r win-x64 --self-contained false
 
-    - name: Build Release Package
-      run: |
-         cd /home/runner/work/CallbackHandler/CallbackHandler/publishOutput
-         zip -r ../callbackhandler.zip ./*
+      - name: Build Release Package
+        run: |
+          cd /home/runner/work/CallbackHandler/CallbackHandler/publishOutput
+          zip -r ../callbackhandler.zip ./*
 
-    - name: Upload the artifact
-      uses: actions/upload-artifact@v4.4.0
-      with:
-        name: callbackhandler
-        path: callbackhandler.zip
-
-    - name: Build and Publish Nuget Packages
-      if: ${{ github.event.release.prerelease == false }} 
-      run: |
-        dotnet pack "CallbackHandler.DataTransferObjects\CallbackHandler.DataTransferObjects.csproj" /p:PackageVersion=${{ steps.get_version.outputs.VERSION }} --output Nugets -c Release            
-        dotnet nuget push Nugets/CallbackHandler.DataTransferObjects.${{ steps.get_version.outputs.VERSION }}.nupkg --api-key ${{ secrets.PRIVATEFEED_APIKEY }} --source ${{ secrets.PRIVATEFEED_URL }} --skip-duplicate
-        dotnet pack "CallbackHandler.CallbackMessage.DomainEvents\CallbackHandler.CallbackMessage.DomainEvents.csproj" /p:PackageVersion=${{ steps.get_version.outputs.VERSION }} --output Nugets -c Release
-        dotnet nuget push Nugets/CallbackHandler.CallbackMessage.DomainEvents.${{ steps.get_version.outputs.VERSION }}.nupkg --api-key ${{ secrets.PRIVATEFEED_APIKEY }} --source ${{ secrets.PRIVATEFEED_URL }} --skip-duplicate
+      - name: Upload the artifact
+        uses: actions/upload-artifact@v4.4.0
+        with:
+          name: callbackhandler
+          path: callbackhandler.zip
 
   deploystaging:
     runs-on: [stagingserver, windows]
@@ -76,214 +67,185 @@ jobs:
     name: "Deploy to Staging"
 
     steps:
-      - name: Download the artifact
+      - name: Download Artifact
         uses: actions/download-artifact@v4.1.8
         with:
           name: callbackhandler
           path: C:\Temp\callbackhandler
 
-      - name: Stop and Remove Existing Windows Service (if applicable)
+      - name: Stop & Remove Existing Service
         shell: pwsh
         run: |
-          $serviceName = "CallbackHandler"
+          $serviceName = "Transaction Processing - Callback Handler"
 
-          if (Get-Service $serviceName -ErrorAction SilentlyContinue) {
-              Write-Host "Stopping existing service..."
+          $svc = Get-Service -Name $serviceName -ErrorAction SilentlyContinue
+          if ($svc) {
+              Write-Host "Stopping service..."
               Stop-Service -Name $serviceName -Force -ErrorAction SilentlyContinue
               Start-Sleep -Seconds 2
 
-              Write-Host "Deleting existing service..."
-              sc.exe delete $serviceName | Out-Null
-          }
-          else {
-              Write-Host "Service does not exist. Skipping remove."
+              Write-Host "Removing service..."
+              sc.exe delete "$serviceName" | Out-Null
+          } else {
+              Write-Host "Service does not exist. Skipping removal."
           }
 
-      - name: Unzip the files
+      - name: Unzip Files
         shell: pwsh
         run: |
           $targetPath = "C:\txnproc\CallbackHandler"
-          $zipFile = "C:\Temp\callbackhandler\callbackhandler.zip"
+          $zipPath = "C:\Temp\callbackhandler\callbackhandler.zip"
 
           if (!(Test-Path $targetPath)) {
-              Write-Host "Creating target directory..."
-              New-Item -ItemType Directory -Path $targetPath -Force | Out-Null
+              New-Item -Path $targetPath -ItemType Directory | Out-Null
           }
 
-          Write-Host "Extracting files..."
-          Expand-Archive -Path $zipFile -DestinationPath $targetPath -Force
+          Write-Host "Extracting package..."
+          Expand-Archive -Path $zipPath -DestinationPath $targetPath -Force
 
-      - name: Ensure .NET 10 Runtime is installed
+      - name: Ensure .NET 10 Runtime Installed
         shell: pwsh
         run: |
-          # Full path to dotnet.exe
           $dotnetExe = "C:\Program Files\dotnet\dotnet.exe"
-      
-          # Add to PATH temporarily
           $env:PATH = "C:\Program Files\dotnet;" + $env:PATH
-      
-          # Check if .NET 10 runtime is installed
-          $dotnetInstalled = 0
-          if (Test-Path $dotnetExe) {
-              $dotnetInstalled = (& $dotnetExe --list-runtimes 2>$null | Select-String "Microsoft\.NETCore\.App 10" | Measure-Object).Count
-          }
-      
-          if ($dotnetInstalled -eq 0) {
-              Write-Host ".NET 10 Runtime not found. Installing..."
-      
-              Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "dotnet-install.ps1" 
+
+          if (!(Test-Path $dotnetExe)) {
+              Write-Host ".NET not found — installing runtime..."
+              Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "dotnet-install.ps1"
               .\dotnet-install.ps1 -Runtime dotnet -Version 10.0.0
-                    
-              Start-Process ".\$installerPath" -ArgumentList "/quiet" -Wait
-              Remove-Item ".\$installerPath"
-      
-              # Ensure dotnet is available after installation
-              $env:PATH = "C:\Program Files\dotnet;" + $env:PATH
-              Write-Host ".NET 10 Runtime installed successfully."
           }
           else {
-              Write-Host ".NET 10 Runtime already installed."
+              $installed = (& $dotnetExe --list-runtimes | Select-String "Microsoft\.NETCore\.App 10" | Measure-Object).Count
+              if ($installed -eq 0) {
+                  Write-Host ".NET 10 missing — installing..."
+                  Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "dotnet-install.ps1"
+                  .\dotnet-install.ps1 -Runtime dotnet -Version 10.0.0
+              }
+              else {
+                  Write-Host ".NET 10 Runtime already installed."
+              }
           }
 
-      - name: Install and Start Windows Service
+      - name: Install & Start Windows Service
         shell: pwsh
         run: |
-          $serviceName     = "CallbackHandler"
-          $serviceDisplay  = "Transaction Processing - Callback Handler"
-          $workingDir      = "C:\Services\CallbackHandler"
-          $dllName         = "CallbackHandler.dll"
-          $exePath         = "C:\Windows\System32\dotnet.exe"
-          $binPath         = "`"$exePath`" `"$workingDir\$dllName`""
+          $serviceName = "Transaction Processing - Callback Handler"
+          $serviceDisplay = "Transaction Processing - Callback Handler"
+          $serviceDir = "C:\txnproc\CallbackHandler"
+          $dll = "CallbackHandler.dll"
+          $exe = "C:\Windows\System32\dotnet.exe"
 
-          # Ensure service directory exists
-          if (!(Test-Path $workingDir)) {
-              New-Item -ItemType Directory -Path $workingDir | Out-Null
-          }
+          $binPath = "`"$exe`" `"$serviceDir\$dll`""
 
-          Write-Host "Creating Windows service..."
-          sc.exe create $serviceName binPath= "$binPath" start= auto | Out-Null
+          Write-Host "Creating service..."
+          sc.exe create "$serviceName" binPath= "$binPath" start= auto | Out-Null
 
-          Write-Host "Setting service description..."
-          sc.exe description $serviceName "$serviceDisplay" | Out-Null
+          Write-Host "Setting description..."
+          sc.exe description "$serviceName" "$serviceDisplay" | Out-Null
 
-          Write-Host "Configuring restart on failure..."
-          sc.exe failure $serviceName actions= restart/60000/restart/60000/restart/60000 reset= 86400 | Out-Null
-          sc.exe failureflag $serviceName 1 | Out-Null
+          Write-Host "Configuring recovery..."
+          sc.exe failure "$serviceName" actions= restart/5000/restart/5000/restart/5000 reset= 86400 | Out-Null
+          sc.exe failureflag "$serviceName" 1 | Out-Null
 
           Write-Host "Starting service..."
-          Start-Service -Name $serviceName
+          Start-Service -Name "$serviceName"
 
-          Write-Host "Service status:"
-          Get-Service -Name
-
+          Get-Service -Name "$serviceName"
 
   deployproduction:
     runs-on: [productionserver, windows]
     needs: [build, deploystaging]
     environment: production
     name: "Deploy to Production"
-    
+  
     steps:
       - name: Download the artifact
         uses: actions/download-artifact@v4.1.8
         with:
           name: callbackhandler
           path: C:\Temp\callbackhandler
-
-      - name: Stop and Remove Existing Windows Service
-        shell: cmd
+  
+      - name: Stop & Remove Existing Windows Service
+        shell: pwsh
         run: |
-          set servicename=CallbackHandler
-
-          sc query %servicename% >nul 2>&1
-          if %errorlevel%==0 (
-              echo Stopping service...
-              sc stop %servicename%
-              echo Deleting service...
-              sc delete %servicename%
-          ) else (
-              echo Service does not exist.
-          )
-          
-      - name: Unzip the files
-        shell: cmd
+          $serviceName = "Transaction Processing - Callback Handler"
+  
+          $svc = Get-Service -Name $serviceName -ErrorAction SilentlyContinue
+          if ($svc) {
+              Write-Host "Stopping existing service..."
+              Stop-Service -Name $serviceName -Force -ErrorAction SilentlyContinue
+              Start-Sleep -Seconds 2
+  
+              Write-Host "Removing existing service..."
+              sc.exe delete "$serviceName" | Out-Null
+          }
+          else {
+              Write-Host "Service does not exist. Skipping removal."
+          }
+  
+      - name: Unzip Files
+        shell: pwsh
         run: |
-          set target=C:\txnproc\CallbackHandler
-
-          if not exist "%target%" (
-              mkdir "%target%"
-          )
-
-          tar -xf C:\Temp\callbackhandler\callbackhandler.zip -C "%target%"
-
-      # Install .NET Runtime if needed. Adjust for the actual version (example: .NET 9 Runtime)
-      - name: Install .NET Runtime
-        shell: cmd
+          $targetPath = "C:\txnproc\CallbackHandler"
+          $zipFile = "C:\Temp\callbackhandler\callbackhandler.zip"
+  
+          if (!(Test-Path $targetPath)) {
+              Write-Host "Creating service directory..."
+              New-Item -ItemType Directory -Path $targetPath -Force | Out-Null
+          }
+  
+          Write-Host "Extracting files..."
+          Expand-Archive -Path $zipFile -DestinationPath $targetPath -Force
+  
+      - name: Ensure .NET 10 Runtime Installed
+        shell: pwsh
         run: |
-          set dotnetPath=C:\Program Files\dotnet\shared\Microsoft.NETCore.App
-          dir "%dotnetPath%\10*" >nul 2>&1
-          if errorlevel 1 (
-              echo Installing .NET 10 Runtime...
-              curl -L -o dotnet-runtime-10.exe https://download.visualstudio.microsoft.com/download/pr/6daeb1c2-6c1d-4c34-a4ba-5f12b5e3a884/dotnet-runtime-10.0.0-win-x64.exe
-              dotnet-runtime-10.exe /quiet
-              del dotnet-runtime-10.exe
-          ) else (
-              echo .NET 10 Runtime already installed.
-          )
-
-      - name: Install and Start Windows Service
-        shell: cmd
+          $dotnetExe = "C:\Program Files\dotnet\dotnet.exe"
+          $env:PATH = "C:\Program Files\dotnet;" + $env:PATH
+  
+          function Install-DotNet {
+              Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "dotnet-install.ps1"
+              .\dotnet-install.ps1 -Runtime dotnet -Version 10.0.0
+              Write-Host ".NET 10 Runtime installed successfully."
+          }
+  
+          if (!(Test-Path $dotnetExe)) {
+              Write-Host ".NET not found — installing..."
+              Install-DotNet
+          }
+          else {
+              $installed = (& $dotnetExe --list-runtimes 2>$null | Select-String "Microsoft\.NETCore\.App 10" | Measure-Object).Count
+              if ($installed -eq 0) {
+                  Write-Host ".NET 10 Runtime missing — installing..."
+                  Install-DotNet
+              }
+              else {
+                  Write-Host ".NET 10 Runtime already installed."
+              }
+          }
+  
+      - name: Install & Start Windows Service
+        shell: pwsh
         run: |
-          set servicename=CallbackHandler
-          set servicedisplay=Transaction Processing - Callback Handler
-          set workdir=C:\Services\CallbackHandler
-          set dllname=CallbackHandler.dll
-          set exepath=C:\Windows\System32\dotnet.exe
-
-          set fullcmd="%exepath% \"%workdir%\%dllname%\""
-
-          echo Creating service...
-          sc create %servicename% binPath= "%fullcmd%" start= auto
-
-          echo Setting service description...
-          sc description %servicename% "%servicedisplay%"
-
-          echo Configuring failure actions...
-          sc failure %servicename% actions= restart/60000/restart/60000/restart/60000 reset= 86400
-
-          echo Setting failure flag (required on some systems)...
-          sc failureflag %servicename% 1
-
-          echo Starting service...
-          sc start %servicename%
-
-          echo Status:
-          sc query %servicename%
-
-  buildwindows:
-    name: "Windows Release"
-    env:
-        ASPNETCORE_ENVIRONMENT: "Production"
-
-    runs-on: windows-latest
-
-    steps:
-    - uses: actions/checkout@v2.3.4
-
-    - name: Get the version
-      id: get_version
-      uses: battila7/get-version-action@v2
-
-    - name: Publish Images to Docker Hub - Pre Release
-      if: ${{ github.event.release.prerelease == true }} 
-      run: |
-        docker build . --file CallbackHandler/Dockerfilewindows --tag stuartferguson/callbackhandlerwindows:dev
-        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
-        docker push stuartferguson/callbackhandlerwindows:dev
-    - name: Publish Images to Docker Hub - Formal Release
-      if: ${{ github.event.release.prerelease == false }} 
-      run: |
-        docker build . --file CallbackHandler/Dockerfilewindows --tag stuartferguson/callbackhandlerwindows:latest
-        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
-        docker push stuartferguson/callbackhandlerwindows:latest
-
+          $serviceName    = "Transaction Processing - Callback Handler"
+          $serviceDisplay = "Transaction Processing - Callback Handler"
+          $workingDir     = "C:\txnproc\CallbackHandler"
+          $dllName        = "CallbackHandler.dll"
+          $exePath        = "C:\Windows\System32\dotnet.exe"
+          $binPath        = "`"$exePath`" `"$workingDir\$dllName`""
+  
+          Write-Host "Creating Windows service..."
+          sc.exe create "$serviceName" binPath= "$binPath" start= auto | Out-Null
+  
+          Write-Host "Setting description..."
+          sc.exe description "$serviceName" "$serviceDisplay" | Out-Null
+  
+          Write-Host "Configuring restart on failure..."
+          sc.exe failure "$serviceName" actions= restart/5000/restart/5000/restart/5000 reset= 86400 | Out-Null
+          sc.exe failureflag "$serviceName" 1 | Out-Null
+  
+          Write-Host "Starting service..."
+          Start-Service -Name "$serviceName"
+  
+          Write-Host "Service status:"
+          Get-Service -Name "$serviceName"
