--- a/CallbackHandler.IntegrationTests/CallbackHandler.IntegrationTests.csproj
+++ b/CallbackHandler.IntegrationTests/CallbackHandler.IntegrationTests.csproj
@@ -9,14 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="EventStoreProjections" Version="2023.12.3" />
 	  <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="3.2.1" />
 	  <PackageReference Include="Reqnroll" Version="3.2.1" />
 	  <PackageReference Include="Reqnroll.NUnit" Version="3.2.1" />
 	  <PackageReference Include="NUnit" Version="4.4.0" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="5.2.0" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+	  <PackageReference Include="SecurityService.Client" Version="2025.12.2" />
+	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2025.12.2" />
 	  <PackageReference Include="Shared" Version="2025.12.1" />
     <PackageReference Include="Shared.IntegrationTesting" Version="2025.12.1" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2025.12.1" />
+    <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2025.12.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +30,33 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CallbackHandler.DataTransferObjects\CallbackHandler.DataTransferObjects.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="C:\Users\stuar\.nuget\packages\eventstoreprojections\2023.12.3\contentFiles\any\net6.0\projections\continuous\CallbackHandlerEnricher.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\stuar\.nuget\packages\eventstoreprojections\2023.12.3\contentFiles\any\net6.0\projections\continuous\EstateAggregator.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\stuar\.nuget\packages\eventstoreprojections\2023.12.3\contentFiles\any\net6.0\projections\continuous\EstateManagementSubscriptionStreamBuilder.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\stuar\.nuget\packages\eventstoreprojections\2023.12.3\contentFiles\any\net6.0\projections\continuous\FileProcessorSubscriptionStreamBuilder.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\stuar\.nuget\packages\eventstoreprojections\2023.12.3\contentFiles\any\net6.0\projections\continuous\MerchantAggregator.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\stuar\.nuget\packages\eventstoreprojections\2023.12.3\contentFiles\any\net6.0\projections\continuous\MerchantBalanceAggregator.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\stuar\.nuget\packages\eventstoreprojections\2023.12.3\contentFiles\any\net6.0\projections\continuous\MerchantBalanceProjection.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\stuar\.nuget\packages\eventstoreprojections\2023.12.3\contentFiles\any\net6.0\projections\continuous\TransactionProcessorSubscriptionStreamBuilder.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
